# deep_connectivity

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 01_preprocessing_demo.ipynb  02_connectivity_demo.ipynb
src/: __init__.py
src/connectivity/: DTF_EEG_reference_example.py  mtmvar.py
src/preprocessing/: __init__.py  constants.py  frame_exporter.py  frame_exporter2.py  frame_selector.py  processing.py  utils.py  windowing.py
