[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "magisterka_pkg"
version = "0.1.0"
description = "Kod źródłowy do mojej pracy magisterskiej"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "mne>=1.5.0",
    "mne-connectivity>=0.5.0",
    "mne-features>=0.3.0",
    "scikit-learn>=1.3.0",
    "catboost>=1.2.0",
    "pyriemann>=0.5.0",
    "joblib>=1.3.0",
    "tqdm>=4.66.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "ipywidgets>=8.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]